Fix in the rough spacing.

--- a/src/pages/in-the-rough/InTheRough.module.scss
+++ b/src/pages/in-the-rough/InTheRough.module.scss
@@ -15,6 +15,7 @@
   flex-direction: column;
   align-items: center;
   margin-top: 60vw;
+  margin-bottom: 40px;
   max-width: 700px;
 
   @media (min-width: 500px) {
